--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,13 @@ repositories {
 }
 
 dependencies {
+    compile "io.netty:netty-buffer:4.1.48.Final"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
     testCompile "org.jetbrains.kotlin:kotlin-test:1.3.71"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit5:1.3.71"
     testImplementation "org.junit.jupiter:junit-jupiter:5.6.1"
+    testCompile "org.assertj:assertj-core:3.15.0"
 }
 
 tasks.test {
