--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.71"
     implementation 'io.netty:netty-buffer:4.1.48.Final'
 
-    testImplementation "org.jetbrains.kotlin:kotlin-test:1.3.71"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit5:1.3.71"
     testImplementation "org.junit.jupiter:junit-jupiter:5.6.2"
+    testImplementation 'org.assertj:assertj-core:3.13.2'
 }
 
 tasks.test {
