--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.60'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.71'
+    id 'com.github.ben-manes.versions' version '0.28.0'
 }
 
-group 'org.example'
+group 'io.rsocket'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,10 +11,11 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile "org.jetbrains.kotlin:kotlin-test:1.3.71"
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit5:1.3.71"
-    testImplementation "org.junit.jupiter:junit-jupiter:5.6.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.71"
+    implementation 'io.netty:netty-buffer:4.1.48.Final'
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.6.2"
+    testImplementation 'org.assertj:assertj-core:3.13.2'
 }
 
 tasks.test {
@@ -24,8 +26,14 @@ tasks.test {
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
+    }
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
+    }
 }
