--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,9 @@
 kotlin.code.style=official
+kotlin_version=1.3.71
+kotlinx_coroutines_version=1.3.5
+strikt_version=0.25.0
+spek_version=2.0.10
+junit_version=5.6.2
+assertj_version=3.13.2
+netty_version=4.1.48.Final
+versions_updates_version=0.28.0
