--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,11 @@
 name: Java CI
 
-on: [push, pull_request]
+on:
+  # Trigger the workflow on push
+  # but only for the master branch
+  push:
+    branches:
+      - develop
 
 jobs:
   build:
@@ -18,5 +23,18 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Cache Gradle packages
+      uses: actions/cache@v1
+      with:
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+        restore-keys: ${{ runner.os }}-gradle
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew clean build
+    - name: Publish to GitHub Packages
+      run: ./gradlew artifactoryPublish
+      env:
+        bintrayUser: ${{ secrets.bintrayUser }}
+        bintrayKey: ${{ secrets.bintrayKey }}
