--- a/rsocket-tck-features/build.gradle
+++ b/rsocket-tck-features/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'java'
     id 'maven-publish'
+    id 'com.jfrog.artifactory'
 }
+
+apply from: "${rootDir}/gradle/artifactory.gradle"
 
 sourceSets {
     main {
