--- a/rsocket-tck-features/build.gradle
+++ b/rsocket-tck-features/build.gradle
@@ -14,6 +14,11 @@ sourceSets {
     }
 }
 
+task sourcesJar(type: Jar) {
+    classifier 'sources'
+    from sourceSets.main.allJava
+}
+
 publishing {
     publications {
         maven(MavenPublication) {
