fixes build for non-develop branch

--- a/.github/workflows/gradle-all.yml
+++ b/.github/workflows/gradle-all.yml
@@ -4,9 +4,11 @@ on:
   # Trigger the workflow on push
   # but only for the master branch
   push:
-    branches:
-      - '**'
-      - !develop
+    branches-ignore:
+      - develop
+  pull_request:
+    branches-ignore:
+      - develop
 
 jobs:
   build:
